--- a/sandbox/cnn.ipynb
+++ b/sandbox/cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "from torch.utils.data import DataLoader\n",
     "from scipy.stats import wasserstein_distance\n",
     "from torch.optim.lr_scheduler import StepLR\n",
+    "from torch.optim import AdamW\n",
     "from geomloss import SamplesLoss"
    ]
   },
@@ -354,6 +355,105 @@
     "# Evaluate on USPS Test Set\n",
     "usps_test_labels, usps_test_preds = evaluate_model(feature_extractor, test_loader_usps)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ot import solve_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, source_loader, target_loader, num_epochs, criterion, weight_wasserstein, loss_function_str=None):\n",
+    "    model.train()\n",
+    "    feature_optimizer = AdamW(model.parameters(), lr=2e-5)\n",
+    "    scheduler = StepLR(feature_optimizer, step_size=10, gamma=0.1)\n",
+    "    \n",
+    "    for epoch in range(num_epochs):\n",
+    "        for (source_data, source_labels), (target_data, _) in zip(source_loader, target_loader):\n",
+    "            feature_optimizer.zero_grad()\n",
+    "\n",
+    "            source_features = model(source_data).detach()\n",
+    "            target_features = model(target_data).detach()\n",
+    "\n",
+    "            source_features_flat = source_features.view(source_features.size(0), -1).cpu().numpy()\n",
+    "            target_features_flat = target_features.view(target_features.size(0), -1).cpu().numpy()\n",
+    "\n",
+    "            classification_loss = criterion(model(source_data), source_labels)\n",
+    "            wd_loss = torch.tensor(0.0, requires_grad=True)\n",
+    "\n",
+    "            if loss_function_str == 'wasserstein':\n",
+    "                # Call solve_sample and extract the Wasserstein distance or desired metric\n",
+    "                result = solve_sample(source_features_flat, target_features_flat, metric='sqeuclidean', reg=1e-3, method='sinkhorn')\n",
+    "                if hasattr(result, 'value'):  # Assuming 'value' holds the Wasserstein distance\n",
+    "                    wd_loss_value = result.value  # Extract the numerical value\n",
+    "                    wd_loss = torch.tensor(wd_loss_value, dtype=torch.float32, requires_grad=True).to(source_features.device)\n",
+    "\n",
+    "            total_loss = classification_loss + weight_wasserstein * wd_loss\n",
+    "            total_loss.backward()\n",
+    "            feature_optimizer.step()\n",
+    "        \n",
+    "        scheduler.step()\n",
+    "        print(f\"Epoch {epoch+1}/{num_epochs}, LR: {scheduler.get_last_lr()[0]} completed.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5, LR: 2e-05 completed.\n",
+      "Epoch 2/5, LR: 2e-05 completed.\n",
+      "Epoch 3/5, LR: 2e-05 completed.\n",
+      "Epoch 4/5, LR: 2e-05 completed.\n",
+      "Epoch 5/5, LR: 2e-05 completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_extractor = FeatureExtractorCNN()\n",
+    "\n",
+    "# Hyperparameters\n",
+    "num_epochs = 5\n",
+    "loss_function_str = 'wasserstein'  # This is just a string to control the use of Wasserstein loss\n",
+    "criterion = nn.CrossEntropyLoss()  # Loss function object\n",
+    "weight_wasserstein = 0.25\n",
+    "\n",
+    "# Start the training process\n",
+    "train(feature_extractor, train_loader_mnist, train_loader_usps, num_epochs,\n",
+    "      criterion, weight_wasserstein, loss_function_str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate on MNIST Test Set\n",
+    "mnist_test_labels, mnist_test_preds = evaluate_model(feature_extractor, test_loader_mnist)\n",
+    "\n",
+    "# Evaluate on USPS Test Set\n",
+    "usps_test_labels, usps_test_preds = evaluate_model(feature_extractor, test_loader_usps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
