--- a/sandbox/cnn.ipynb
+++ b/sandbox/cnn.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marionchadal/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/marionchadal/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/transformers/utils/generic.py:441: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -18,13 +29,12 @@
     "from torch.utils.data import DataLoader\n",
     "from scipy.stats import wasserstein_distance\n",
     "from torch.optim.lr_scheduler import StepLR\n",
-    "from torch.optim import AdamW\n",
-    "from geomloss import SamplesLoss"
+    "from torch.optim import AdamW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,16 +368,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ot import solve_sample"
+    "from ot import solve_sample\n",
+    "import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./data/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9912422/9912422 [00:00<00:00, 12708641.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./data/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 28881/28881 [00:00<00:00, 24265964.31it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/train-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1648877/1648877 [00:00<00:00, 9709907.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/t10k-images-idx3-ubyte.gz to ./data/MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4542/4542 [00:00<00:00, 7361100.76it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_usps, test_usps = utils.load_usps('../Digit-Five/usps_28x28.pkl', batch_size=64)\n",
+    "train_mnist, test_mnist = utils.load_mnist(batch_size=64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,18 +502,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5, LR: 2e-05 completed.\n",
-      "Epoch 2/5, LR: 2e-05 completed.\n",
-      "Epoch 3/5, LR: 2e-05 completed.\n",
-      "Epoch 4/5, LR: 2e-05 completed.\n",
-      "Epoch 5/5, LR: 2e-05 completed.\n"
+     "ename": "RuntimeError",
+     "evalue": "Expected floating point type for target with class probabilities, got Long",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m/Users/marionchadal/Library/Mobile Documents/com~apple~CloudDocs/M2DS 2/ML Research Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m weight_wasserstein \u001b[39m=\u001b[39m \u001b[39m0.25\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Start the training process\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m train(feature_extractor, train_mnist, train_usps, num_epochs,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m       criterion, weight_wasserstein, loss_function_str)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m a \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;32m/Users/marionchadal/Library/Mobile Documents/com~apple~CloudDocs/M2DS 2/ML Research Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m source_features_flat \u001b[39m=\u001b[39m source_features\u001b[39m.\u001b[39mview(source_features\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mnumpy()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m target_features_flat \u001b[39m=\u001b[39m target_features\u001b[39m.\u001b[39mview(target_features\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m), \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mnumpy()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m classification_loss \u001b[39m=\u001b[39m criterion(model(source_data), source_labels)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m wd_loss \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mtensor(\u001b[39m0.0\u001b[39m, requires_grad\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mif\u001b[39;00m loss_function_str \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mwasserstein\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/marionchadal/Library/Mobile%20Documents/com~apple~CloudDocs/M2DS%202/ML%20Research%20Seminar/Domain-adaptation-research-project/sandbox/cnn.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39m# Call solve_sample and extract the Wasserstein distance or desired metric\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compiled_call_impl(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)  \u001b[39m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_impl(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_pre_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[39mor\u001b[39;00m _global_backward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1522\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/torch/nn/modules/loss.py:1179\u001b[0m, in \u001b[0;36mCrossEntropyLoss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m   1178\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m-> 1179\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mcross_entropy(\u001b[39minput\u001b[39;49m, target, weight\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight,\n\u001b[1;32m   1180\u001b[0m                            ignore_index\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mignore_index, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction,\n\u001b[1;32m   1181\u001b[0m                            label_smoothing\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlabel_smoothing)\n",
+      "File \u001b[0;32m~/Library/Mobile Documents/.Trash/myenv/lib/python3.11/site-packages/torch/nn/functional.py:3059\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3057\u001b[0m \u001b[39mif\u001b[39;00m size_average \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m reduce \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3058\u001b[0m     reduction \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3059\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mcross_entropy_loss(\u001b[39minput\u001b[39;49m, target, weight, _Reduction\u001b[39m.\u001b[39;49mget_enum(reduction), ignore_index, label_smoothing)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Expected floating point type for target with class probabilities, got Long"
      ]
     }
    ],
@@ -431,8 +532,9 @@
     "weight_wasserstein = 0.25\n",
     "\n",
     "# Start the training process\n",
-    "train(feature_extractor, train_loader_mnist, train_loader_usps, num_epochs,\n",
-    "      criterion, weight_wasserstein, loss_function_str)\n"
+    "train(feature_extractor, train_mnist, train_usps, num_epochs,\n",
+    "      criterion, weight_wasserstein, loss_function_str)\n",
+    "a = 1"
    ]
   },
   {
@@ -442,18 +544,11 @@
    "outputs": [],
    "source": [
     "# Evaluate on MNIST Test Set\n",
-    "mnist_test_labels, mnist_test_preds = evaluate_model(feature_extractor, test_loader_mnist)\n",
+    "mnist_test_labels, mnist_test_preds = evaluate_model(feature_extractor, test_mnist)\n",
     "\n",
     "# Evaluate on USPS Test Set\n",
-    "usps_test_labels, usps_test_preds = evaluate_model(feature_extractor, test_loader_usps)"
+    "usps_test_labels, usps_test_preds = evaluate_model(feature_extractor, test_usps)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -472,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
